grammar.js
    document: $ => seq(
      optional($.zeroth_section),
      repeat($.heading),
    ),

    // §3 Headings
    heading: $ => prec.right(seq(
      field('stars', $.stars),
      $._S,
      optional(field('todo', $.todo_keyword)),
      optional(field('priority', $.priority)),
      optional(field('comment', $.comment_keyword)),
      optional(field('title', $._heading_title)),
      optional(field('tags', $.tags)),
      $._NL,
      optional(field('planning', $.planning)),
      optional(field('properties', $.property_drawer)),
      repeat($.blank_line),
      optional(field('body', $.section)),
      repeat($.heading),
      optional($._HEADING_END),
    )),

    // stars: emitted by external scanner (column 0 + '*'+)
    // Declared in externals — no grammar rule needed.

    todo_keyword: $ => seq(
      $._TODO_KW,
      $._S,
    ),

    comment_keyword: $ => $._COMMENT_TOKEN,

    priority: $ => seq(
      '[#',
      field('value', $.priority_value),
      ']',
      $._S,
    ),

    priority_value: _ => /[a-zA-Z0-9]+/,

    _heading_title: $ => repeat1($._object_nolb),

    tags: $ => seq(
      ':',
      $.tag,
      repeat(seq(':', $.tag)),
      ':',
    ),

    tag: _ => /[A-Za-z0-9_@#%\u0080-\uFFFF]+/,

    // §4 Sections
    zeroth_section: $ => prec.left(repeat1(choice(
      $._zs_content,
      $.blank_line,
    ))),

    section: $ => prec.left(repeat1(choice(
      $._section_content,
      $.blank_line,
    ))),

    _zs_content: $ => choice(
      $.indent,
      $._zs_element_no_block,
    ),

    _section_content: $ => choice(
      $.indent,
      $._section_element_no_block,
    ),

    // §5 Element Dispatch
    indent: $ => prec.right(seq(
      field('indent', alias($._INDENT_BEGIN, $.whitespace)),
      $._block,
    )),

    _block: $ => seq(
      field('body', choice(
        $.blank_line,
        $.indent,
        $._block_section_element_no_block,
      )),
      repeat(field('body', choice(
        $.blank_line,
        $.indent,
        prec(-6, seq($._INDENT, $.property_drawer)),
        prec(-5, seq($._INDENT_CONTENT_CONTINUE, $._block_section_element_no_block)),
      ))),
      $._INDENT_END,
    ),

    center_block: $ => seq(
      token(prec(2, ci('#+begin_center'))),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($._gblock_body)),
      choice(
        seq(
          token(prec(2, /[ \t]*#\+end_center/i)),
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        // Alias the boundary-abort token to `ERROR` so downstream consumers
        // can key off an explicit ERROR-tagged node when a block is cut by a
        // heading boundary. This is an alias marker, not parser recovery.
        seq(alias($._HEADING_BOUNDARY_ABORT, $.ERROR)),
      ),
    ),

    quote_block: $ => seq(
      token(prec(2, ci('#+begin_quote'))),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($._gblock_body)),
      choice(
        seq(
          token(prec(2, /[ \t]*#\+end_quote/i)),
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        seq(alias($._HEADING_BOUNDARY_ABORT, $.ERROR)),
      ),
    ),

    special_block: $ => seq(
      token(prec(1, ci('#+begin_'))),
      field('name', $._GBLOCK_NAME),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($._gblock_body)),
      choice(
        seq(
          token(prec(1, /[ \t]*#\+end_/i)),
          $._BLOCK_END_MATCH,
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        seq(
          alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
          $._SPECIAL_BLOCK_ABORT_SYNC,
        ),
      ),
    ),

    _block_params: $ => seq($._S, $._REST_OF_LINE),

    _gblock_body: $ => repeat1(choice(
      seq($._INDENT, $._section_element),
      $._section_element,
      $.blank_line,
    )),

    // --- 6.2 Drawers ---
    drawer: $ => seq(
      token(prec(2, ':')),
      field('name', alias($._DRAWER_NAME, $.drawer_name)),
      choice(
        seq(':', $._NL),
        seq(':', field('body', $.drawer_start_text), $._NL),
      ),
      $._DRAWER_ENTER_SYNC,
      field('body', optional($._drawer_body)),
      choice(
        seq(
          token(prec(2, /[ \t]*:end:/i)),
          optional(choice(
            $._TRAILING,
            field('end_text', alias($._REST_OF_LINE, $.plain_text)),
          )),
          $._NL,
          $._DRAWER_EXIT_SYNC,
        ),
        seq(
          alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
          $._DRAWER_EXIT_SYNC,
        ),
      ),
    ),

    _DRAWER_NAME: _ => token(choice(
      /[A-DF-Za-df-z0-9_\-][A-Za-z0-9_\-]*/,
      /[Ee][A-MO-Za-mo-z0-9_\-][A-Za-z0-9_\-]*/,
      /[Ee][Nn][A-CE-Za-ce-z0-9_\-][A-Za-z0-9_\-]*/,
      /[Ee][Nn][Dd][A-Za-z0-9_\-]+/,
    )),

    _drawer_body: $ => repeat1($._drawer_body_line),

    dynamic_block: $ => seq(
      token(prec(3, ci('#+begin:'))),
      $._S,
      field('name', alias($._DYNBLOCK_NAME, $.dynamic_block_name)),
      optional(field('parameters', seq($._S, $._REST_OF_LINE))),
      $._NL,
      field('body', optional($._dynblock_body)),
      choice(
        seq(
          token(prec(3, /[ \t]*#\+end:/i)),
          optional($._TRAILING),
          $._NL,
          $._DYNBLOCK_SYNC,
        ),
        seq(
          alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
          $._DYNBLOCK_SYNC,
        ),
      ),
    ),

    _DYNBLOCK_NAME: _ => /[^ \t\n]+/,

    _dynblock_body: $ => repeat1(choice(
      seq($._INDENT, $._section_element),
      $._section_element,
      $.blank_line,
    )),

    // --- 6.4 Footnote Definitions ---
    // Footnote definitions start at column 0 by construction (after NL).
    // Column-0 enforcement is a semantic check, not grammar-level.
    list: $ => prec.right(repeat1(field('item', $.list_item))),

    list_item: $ => prec.right(seq(
      field('bullet', $._bullet),
      optional(field('counter_set', $.counter_set)),
      optional(field('checkbox', $.checkbox)),
      choice(
        prec(1, seq(
          field('tag', $.item_tag),
          optional(field('first_line', $._item_first_line)),
          optional(field('first_line', alias($._TRAILING, $.plain_text))),
          $._NL_or_EOI,
        )),
        seq(
          optional(field('first_line', $._item_first_line)),
          optional(field('first_line', alias($._TRAILING, $.plain_text))),
          $._NL_or_EOI,
        ),
      ),
      optional(prec.dynamic(5, $._list_item_body)),
    )),

    _list_item_body: $ => seq(
      $._INDENT_BEGIN,
      $._block,
    ),

    _item_first_line: $ => repeat1($._object),

    _bullet: $ => choice(
      $.unordered_bullet,
      $._ordered_bullet,
    ),

    unordered_bullet: _ => token(/[+*-][ \t]+/),

    completion_counter: $ => seq(
      '[',
      field('value', $.completion_counter_value),
      ']',
    ),

    completion_counter_value: _ => token(choice(
      /[0-9]*\/[0-9]*/,
      /[0-9]*%/,
    )),

    property_drawer: $ => prec(4, seq(
      token(prec(3, /[ \t]*:[Pp][Rr][Oo][Pp][Ee][Rr][Tt][Ii][Ee][Ss]:/)),
      optional($._TRAILING),
      $._NL,
      $._DRAWER_ENTER_SYNC,
      repeat(choice(
        $.blank_line,
        seq(optional($._INDENT), $.node_property),
      )),
      choice(
        seq(
          token(prec(3, /[ \t]*:end:/i)),
          optional(choice(
            $._TRAILING,
            field('end_text', alias($._REST_OF_LINE, $.plain_text)),
          )),
          $._NL,
          $._DRAWER_EXIT_SYNC,
        ),
        seq(
          alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
          $._DRAWER_EXIT_SYNC,
        ),
      ),
    )),

    org_table: $ => prec(1, seq(
      $._TABLE_START,
      repeat1(seq(optional($._INDENT), $.table_row)),
      repeat($.tblfm_line),
      $._TABLE_BREAK_SYNC,
    )),

    table_row: $ => seq(
      '|',
      choice(
        field('rule', alias($._table_rule_row, $.table_rule)),
        $._table_std_row,
      ),
      $._NL_or_EOI,
    ),

    _table_rule_row: _ => seq('-', /[^\n]*/),

    _table_std_row: $ => seq(
      choice(
        $.table_cell,
        seq(
          repeat1(seq($.table_cell, '|')),
          optional($.table_cell),
        ),
      ),
    ),

    table_cell: $ => choice(
      seq($._S, $._table_cell_objects, optional($._S)),
      seq(optional($._S), $._table_cell_objects, optional($._S)),
      alias($._S, $.plain_text),
      $._TABLE_CELL_EMPTY,
    ),

    _table_cell_objects: $ => repeat1($._object_table),

    comment_block: $ => seq(
      token(prec(2, ci('#+begin_comment'))),
      optional($._TRAILING),
      $._NL,
      field('body', optional($.comment_block_body)),
      choice(
        seq(
          token(prec(3, /[ \t]*#\+end_comment/i)),
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
      ),
    ),

    example_block: $ => seq(
      token(prec(2, ci('#+begin_example'))),
      optional(field('parameters', $._block_params)),
      $._NL,
      field('body', optional($.example_block_body)),
      choice(
        seq(
          token(prec(3, /[ \t]*#\+end_example/i)),
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
      ),
    ),

    example_block_body: $ => repeat1($.example_line),

    example_line: $ => choice(
      seq($._RAW_BLOCK_LINE_TEXT, '\n'),
      '\n',
    ),

    comment_block_body: $ => repeat1($.comment_line),

    comment_line: $ => choice(
      seq($._RAW_BLOCK_LINE_TEXT, '\n'),
      '\n',
    ),

    export_block: $ => seq(
      token(prec(2, ci('#+begin_export'))),
      $._S,
      field('backend', alias($._EXPORT_BACKEND, $.export_backend)),
      optional(field('parameters', seq($._S, $._REST_OF_LINE))),
      $._NL,
      field('body', optional($.export_block_body)),
      choice(
        seq(
          token(prec(3, /[ \t]*#\+end_export/i)),
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
      ),
    ),

    _EXPORT_BACKEND: _ => /[^ \t\n]+/,

    export_block_body: $ => repeat1($.export_line),

    export_line: $ => choice(
      seq($._RAW_BLOCK_LINE_TEXT, '\n'),
      '\n',
    ),

    src_block: $ => seq(
      token(prec(2, ci('#+begin_src'))),
      optional(seq(
        $._S,
        field('language', alias($._SRC_LANGUAGE, $.language)),
        optional(seq($._S, field('switches', alias($._REST_OF_LINE, $.src_switches)))),
      )),
      $._NL,
      field('body', optional($.src_block_body)),
      choice(
        seq(
          token(prec(3, /[ \t]*#\+end_src/i)),
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        alias($._HEADING_BOUNDARY_ABORT, $.ERROR),
      ),
    ),

    _SRC_LANGUAGE: _ => /[^ \t\n]+/,

    src_block_body: $ => repeat1($.src_line),

    src_line: $ => choice(
      seq($._RAW_BLOCK_LINE_TEXT, '\n'),
      '\n',
    ),

    _RAW_BLOCK_LINE_TEXT: _ => choice(
      /[^*\n][^\n]*/,
      /\*[^ \t\n][^\n]*/,
      '*',
    ),

    verse_block: $ => seq(
      token(prec(2, ci('#+begin_verse'))),
      optional($._TRAILING),
      $._NL,
      field('body', optional($._gblock_body)),
      choice(
        seq(
          token(prec(3, /[ \t]*#\+end_verse/i)),
          optional($._TRAILING),
          $._NL_or_EOI,
        ),
        seq(alias($._HEADING_BOUNDARY_ABORT, $.ERROR)),
      ),
    ),

    fixed_width: $ => seq(
      $._fixed_width_line,
      repeat($._fixed_width_continuation_line),
    ),

    // _FIXED_WIDTH_COLON (external) enforces the BOL constraint from the spec:
    //   _fixed_width_line <- _BOL _INDENT? ':' (' ' value:[^\n]* / &_NL) _NL
    // The scanner only emits this token when ':' is the first non-whitespace
    // character on the line (column 0, or column > 0 after list-scanner
    // positioning with prev_char == 0). It consumes the optional leading
    // indentation and the ':' itself.
    _fixed_width_line: $ => choice(
      seq($._FIXED_WIDTH_COLON, ' ', optional(field('value', alias(/[^\n]*/, $.fixed_width_value))), $._NL_or_EOI),
      seq($._FIXED_WIDTH_COLON, $._NL_or_EOI),
    ),

    // _FIXED_WIDTH_CONTINUE uses the same BOL gate as _FIXED_WIDTH_COLON but
    // is only valid inside fixed_width's repeat — never at element-start level.
    //
    // Unindented: _FIXED_WIDTH_CONTINUE fires at column 0, consuming ':'.
    //
    // Indented (inside `indent` blocks): scan_block_content_continue normally
    // emits _INDENT_CONTENT_CONTINUE for any non-blank indented line.  When
    // _INDENT_FIXED_WIDTH_CONTINUE is also in valid_symbols (we are inside
    // fixed_width's repeat) AND the line looks like ': ' or ':\n', it emits
    // _INDENT_FIXED_WIDTH_CONTINUE instead.  This kills the "start a new
    // fixed_width element" GLR path (which needed _INDENT_CONTENT_CONTINUE)
    // and leaves only the continuation path alive, then _FIXED_WIDTH_CONTINUE
    // consumes ':' to complete the line header.
    _fixed_width_continuation_line: $ => choice(
      seq($._FIXED_WIDTH_CONTINUE, ' ', optional(field('value', alias(/[^\n]*/, $.fixed_width_value))), $._NL_or_EOI),
      seq($._FIXED_WIDTH_CONTINUE, $._NL_or_EOI),
      seq($._INDENT_FIXED_WIDTH_CONTINUE, $._FIXED_WIDTH_CONTINUE, ' ', optional(field('value', alias(/[^\n]*/, $.fixed_width_value))), $._NL_or_EOI),
      seq($._INDENT_FIXED_WIDTH_CONTINUE, $._FIXED_WIDTH_CONTINUE, $._NL_or_EOI),
    ),

    // --- 7.7 Horizontal Rules ---
    special_keyword: $ => choice(
      seq(
        '#+',
        field('key', alias($._TODO_SPECIAL_KEY, $.keyword_key)),
        ':',
        $._TODO_SETUP_SYNC,
        optional(seq($._S, field('value', alias($._REST_OF_LINE, $.keyword_value)))),
        $._NL_or_EOI,
      ),
      seq(
        '#+',
        field('key', alias($._SPECIAL_KEY_NO_TODO, $.keyword_key)),
        ':',
        optional(seq($._S, field('value', alias($._REST_OF_LINE, $.keyword_value)))),
        $._NL_or_EOI,
      ),
    ),

    _TODO_SPECIAL_KEY: _ => token(prec(2, ci('TODO'))),

    _SPECIAL_KEY_NO_TODO: _ => token(prec(1, /[A-Za-z][A-Za-z0-9_-]*/)),

    // --- 7.9 Affiliated Keywords ---
    paragraph: $ => prec(-1, repeat1($._paragraph_line)),

    _paragraph_line: $ => seq(
      choice(
        $._timestamp_paragraph_line,
        repeat1($._object),
        $._indented_object_line,
      ),
      $.newline,
    ),

    regular_link: $ => choice(
      seq('[[', field('path', alias($._link_path, $.link_path)), ']]'),
      seq(
        '[[',
        field('path', alias($._link_path, $.link_path)),
        '][',
        field('description', $._link_description),
        ']]',
      ),
    ),

    _link_path: _ => /([^\[\]]|\\.)*/,

    _link_description: $ => repeat1(choice(
      alias($._LINK_DESC_TEXT, $.plain_text),
      ']',
      alias($._NL, $.newline), // plain _NL (not _NL_or_EOI) to prevent zero-width loop at EOF in fuzzer
    )),

    plain_text: $ => $._PLAIN_TEXT,

    // §9 Object Sets
    newline: $ => $._NL_or_EOI,
    blank_line: $ => $._blank_line,

    // §10 Lexical Primitives
    _S: _ => /[ \t]+/,
    _NL: _ => /\n/,
    // _NL_or_EOI is used in every position where _NL is the final token of a
    // complete element, so that elements at the end of a file without a
    // trailing newline parse cleanly.  Structural separators (block begin
    // lines, drawer open/close, footnote body, _fn_ref_def, _link_description)
    // keep plain _NL to avoid ambiguity and potential zero-width loops in
    // repeat1 rules.
    _NL_or_EOI: $ => choice($._NL, $._EOI),
    _INDENT: _ => token(prec(-1, /[ \t]+/)),
    _TRAILING: _ => /[ \t]+/,
    _REST_OF_LINE: _ => /[^\n]+/,

    _blank_line: _ => token(prec(-1, /[ \t]*\n/)),
