test/corpus/greater_blocks.txt
================
Center block
================
#+begin_center
Centered text.
#+end_center

---

(document
  (zeroth_section
    (center_block
      (paragraph
        (plain_text)
        (newline)))))

================
Quote block
================
#+begin_quote
A wise quote.
#+end_quote

---

(document
  (zeroth_section
    (quote_block
      (paragraph
        (plain_text)
        (newline)))))

================
Special block
================
#+begin_warning
Danger ahead!
#+end_warning

---

(document
  (zeroth_section
    (special_block
      (paragraph
        (plain_text)
        (newline)))))

================
Drawer
================
:MYDRAWER:
Some content in drawer.
:END:

---

(document
  (zeroth_section
    (drawer
      (drawer_name)
      (paragraph
        (plain_text)
        (newline)))))

================
Adjacent dynamic blocks with table bodies
================
#+begin: clocktable
| Bibliography check   | 0:30   |
#+end:

#+begin: columnview
| Second chapter           | TODO | B        | :writing:  |
#+end:

---

(document
  (zeroth_section
    (dynamic_block
      (dynamic_block_name)
      (org_table
        (table_row
          (table_cell
            (plain_text))
          (table_cell
            (plain_text)))))
    (blank_line)
    (dynamic_block
      (dynamic_block_name)
      (org_table
        (table_row
          (table_cell
            (plain_text))
          (table_cell
            (plain_text))
          (table_cell
            (plain_text))
          (table_cell
            (plain_text)))))))

================
Indented greater and dynamic blocks
================
  #+begin_center
  Centered text.
  #+end_center

  #+begin_quote
  A wise quote.
  #+end_quote

  #+begin_warning
  Danger ahead!
  #+end_warning

  #+begin: clocktable
  | Bibliography check   | 0:30   |
  #+end:

---

(document
  (zeroth_section
    (indent
      (whitespace)
      (center_block
        (paragraph
          (plain_text)
          (newline))))
    (blank_line)
    (indent
      (whitespace)
      (quote_block
        (paragraph
          (plain_text)
          (newline))))
    (blank_line)
    (indent
      (whitespace)
      (special_block
        (paragraph
          (plain_text)
          (newline))))
    (blank_line)
    (indent
      (whitespace)
      (dynamic_block
        (dynamic_block_name)
        (org_table
          (table_row
            (table_cell
              (plain_text))
            (table_cell
              (plain_text))))))))
